feat: add participants actions update: swagger OpenAPI documentation
